fix scroll on mobile

--- a/src/Components/SaveTheDate/SaveTheDate.scss
+++ b/src/Components/SaveTheDate/SaveTheDate.scss
@@ -30,8 +30,7 @@ html {
   overflow: hidden;
 
   &__container {
-    // height: 90%;
-    height: auto;
+    height: 90%;
     max-height: 90svh;
     width: 90%;
     background-color: rgba(0, 0, 0, 0.2);
